unpackaged/main/default/objects/tspa__ObjectFieldSettingsForInviteComponent__c/tspa__ObjectFieldSettingsForInviteComponent__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Visual Remote Assistant - Objects for Invite Form Configuration.
Object and field mapping needs to be configured here to have component on the page.</description>
    <label>Visual Remote Assistant - Object support</label>
</CustomObject>