unpackaged/main/default/objects/tspa__ObjectFieldSettingsForInviteComponent__c/fields/tspa__Digital_Engagement__c.field-meta.xml
<CustomField>
    <fullName>tspa__Digital_Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Engagement</label>
    <type>Checkbox</type>
</CustomField>