unpackaged/main/default/objects/tspa__ObjectFieldSettingsForInviteComponent__c/fields/tspa__Email_Field__c.field-meta.xml
<CustomField>
    <fullName>tspa__Email_Field__c</fullName>
    <label>Email Field</label>
    <length>254</length>
    <type>Text</type>
</CustomField>