unpackaged/main/default/objects/tspa__ObjectFieldSettingsForInviteComponent__c/fields/tspa__Is_knowledgebase__c.field-meta.xml
<CustomField>
    <fullName>tspa__Is_knowledgebase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is knowledgebase</label>
    <type>Checkbox</type>
</CustomField>