unpackaged/main/default/objects/tspa__ObjectFieldSettingsForInviteComponent__c/fields/tspa__Knowledgebase_Result__c.field-meta.xml
<CustomField>
    <fullName>tspa__Knowledgebase_Result__c</fullName>
    <label>Knowledgebase Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>