unpackaged/main/default/objects/tspa__ObjectFieldSettingsForInviteComponent__c/fields/tspa__Language_Field__c.field-meta.xml
<CustomField>
    <fullName>tspa__Language_Field__c</fullName>
    <label>Language Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>