unpackaged/main/default/objects/tspa__ObjectFieldSettingsForInviteComponent__c/fields/tspa__Phone_Number_Field__c.field-meta.xml
<CustomField>
    <fullName>tspa__Phone_Number_Field__c</fullName>
    <label>Phone Number Field</label>
    <length>254</length>
    <type>Text</type>
</CustomField>