unpackaged/main/default/objects/tspa__ObjectFieldSettingsForInviteComponent__c/listViews/tspa__Show_Info.listView-meta.xml
<ListView>
    <fullName>tspa__Show_Info</fullName>
    <columns>NAME</columns>
    <columns>tspa__Customer_Refrence_Field__c</columns>
    <columns>tspa__Phone_Number_Field__c</columns>
    <columns>tspa__Email_Field__c</columns>
    <columns>tspa__Customer_Name__c</columns>
    <columns>tspa__Language_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>Show Info</label>
</ListView>